# phonometry

./: .git-blame-ignore-revs  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONFORMANCE-REPORT-DESIGN.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SIDEBAR-CHIPS-NOTES.md  codecov.yml  filter_benchmark_report.md  generate_diagrams.py  generate_graphs.py  llms-full.txt  llms.txt  pyproject.toml  requirements-dev.txt  requirements-figures.txt  requirements.txt  sonar-project.properties
.github/: dependabot.yml
.github/images/: anim_comb_filtering.webm  anim_comb_filtering_dark.webm  anim_comb_filtering_es.webm  anim_comb_filtering_es_dark.webm  anim_fdtd_barrier.webm  anim_fdtd_barrier_dark.webm  anim_fdtd_barrier_es.webm  anim_fdtd_barrier_es_dark.webm  anim_fdtd_diffusion.webm  anim_fdtd_diffusion_dark.webm  anim_fdtd_diffusion_es.webm  anim_fdtd_diffusion_es_dark.webm  anim_fdtd_ducting.webm  anim_fdtd_ducting_dark.webm  anim_fdtd_ducting_es.webm  anim_fdtd_ducting_es_dark.webm  anim_fdtd_ground_effect.webm  anim_fdtd_ground_effect_dark.webm  anim_fdtd_ground_effect_es.webm  anim_fdtd_ground_effect_es_dark.webm  anim_fdtd_room_modes.webm  anim_fdtd_room_modes_dark.webm  anim_fdtd_room_modes_es.webm  anim_fdtd_room_modes_es_dark.webm  anim_flanking_paths.webm  anim_flanking_paths_dark.webm  anim_flanking_paths_es.webm  anim_flanking_paths_es_dark.webm  anim_instantaneous_intensity.webm  anim_instantaneous_intensity_dark.webm  anim_instantaneous_intensity_es.webm  anim_instantaneous_intensity_es_dark.webm  anim_intensity_scan_power.webm  anim_intensity_scan_power_dark.webm  anim_intensity_scan_power_es.webm  anim_intensity_scan_power_es_dark.webm  anim_onset_detection.webm  anim_onset_detection_dark.webm  anim_onset_detection_es.webm  anim_onset_detection_es_dark.webm  (+24 more)
.github/scripts/: comment_pr.py
.github/workflows/: docs.yml  manual_verify_install.yml  publish-stub.yml  python-app.yml  release.yml
.playwright-mcp/: page-2026-07-07T00-42-24-529Z.yml
docs/: CONFORMANCE.md  ERRATA.md  README.md  aircraft-noise.md  api-reference.md  atmospheric-refraction.md  block-processing.md  building-acoustics.md  calibration.md  cepstrum-echoes.md  correlation-delay.md  data-qualification.md  dynamic-stiffness.md  electroacoustics.md  enclosed-space-absorption.md  fdtd-simulation.md  filter-banks.md  getting-started.md  ground-barriers.md  gum-uncertainty.md  hearing-threshold.md  human-vibration.md  impulse-prominence.md  installed-structure-borne.md  insulation-field.md  insulation-lab.md  insulation-prediction.md  intensity.md  junction-transmission.md  levels.md  loudness.md  materials.md  mechanical-mobility.md  miso-coherence.md  multichannel.md  multiple-shock-vibration.md  noise-control.md  noise-induced-hearing-loss.md  objective-intelligibility.md  occupational-exposure.md  (+43 more)
hooks/: pre-commit
scripts/: api_taxonomy.py  bench.py  benchmark_filters.py  check_api_reference.py  check_figures.py  conformance_report.py  fdtd2d.py  gen_llms.py  generate_api_docs.py  generate_diagrams.py  generate_graphs.py  generate_llms.py  generate_reports.py
site/: .htmlvalidate.json  .pa11yci.json  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
site/public/: manifest.json  robots.txt
site/scripts/: add-sitemap-lastmod.mjs  check-i18n-parity.mjs  copy-llms.mjs  fix-redirect-doctype.mjs  optimize-images.mjs
site/src/: content.config.ts  routeData.ts  translations.d.ts
src/phonometry/: __init__.py  _compat.py  _i18n.py  _levels_math.py  _plotting.py  _types.py  _validation.py  _version.py  _warnings.py  _zwicker_data.py  absorption_rating.py  absorption_uncertainty.py  air_absorption.py  aircraft_atmospheric_absorption.py  aircraft_noise.py  airflow_resistance.py  airport_noise.py  building_prediction.py  building_uncertainty.py  calibration.py  compliance.py  core.py  distortion.py  dynamic_stiffness.py  en12354_6.py  enclosed_space_absorption.py  environmental.py  environmental_measurement.py  facade_prediction.py  filter_design.py  flanking_transmission.py  floor_covering_improvement.py  fluctuation_strength.py  frequencies.py  frequency_response.py  hearing.py  human_vibration.py  impedance_tube.py  impulse_prominence.py  installed_structure_borne.py  (+56 more)
src/pyoctaveband/: __init__.py  _version.py  calibration.py  compliance.py  core.py  filter_design.py  frequencies.py  levels.py  parametric_filters.py  utils.py
stub/: README.md  pyproject.toml
stub/src/pyoctaveband/: __init__.py
tests/: conftest.py  golden_data.py  reference_data.py  test_absorption_rating.py  test_advanced.py  test_air_absorption.py  test_aircraft_atmospheric_absorption.py  test_aircraft_noise.py  test_aircraft_noise_system.py  test_airflow_resistance.py  test_airport_noise.py  test_api_docs_generator.py  test_audio_processing.py  test_basic.py  test_building_prediction.py  test_building_uncertainty.py  test_calibration_validation.py  test_compliance.py  test_conformance_report.py  test_coverage_fix.py  test_deprecated_aliases.py  test_distortion.py  test_dynamic_stiffness.py  test_en12354_6.py  test_enclosed_space_absorption.py  test_environmental.py  test_environmental_measurement.py  test_equal_loudness.py  test_errors_and_edge_cases.py  test_facade_insulation.py  test_facade_prediction.py  test_fdtd2d.py  test_filter_design.py  test_floor_covering_improvement.py  test_fluctuation_strength.py  test_frequency_response.py  test_g_weighting.py  test_generate_reports.py  test_golden_baseline.py  test_graph_measurements.py  (+76 more)
tests/aircraft/: doc29_workbook_data.py  test_aircraft_atmospheric_absorption.py  test_aircraft_noise.py  test_aircraft_noise_system.py  test_aircraft_plot_i18n.py  test_airport_noise.py  test_anp_fleet.py  test_epnl_report.py  test_rotorcraft_noise.py  test_rotorcraft_norah2.py
tests/broadcast/: test_broadcast_plot_i18n.py  test_ebu_material_oracle.py  test_ebu_material_series.py  (+2 more)
(+870 files in other folders)
