[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyOctaveBand"
dynamic = ["version"]
authors = [
  { name="Jose Manuel Requena Plens", email="jmrplens@gmail.com" },
]
description = "Octave-Band and Fractional Octave-Band filter for signals in time domain."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.4.4",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
perf = ["numba>=0.65.1"]
plot = ["matplotlib>=3.10.9"]
full = ["numba>=0.65.1", "matplotlib>=3.10.9"]

[project.urls]
"Homepage" = "https://github.com/jmrplens/PyOctaveBand"
"Bug Tracker" = "https://github.com/jmrplens/PyOctaveBand/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyoctaveband = ["py.typed"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.mypy]
# 3.12: numpy >= 2.5 ships PEP 695 `type` statements in its stubs, which mypy
# rejects under a 3.11 target. Runtime support stays at >= 3.11 (3.11 users
# resolve numpy 2.4.x, which still supports it).
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Low sampling rate:UserWarning",
]