[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyOctaveBand"
version = "2.1.0"
authors = [
  { name="Jose Manuel Requena Plens", email="jmrplens@gmail.com" },
]
description = "PyOctaveBand is now phonometry. This transition package installs phonometry and keeps 'import pyoctaveband' working."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 7 - Inactive",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "phonometry>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/jmrplens/phonometry"
"Documentation" = "https://jmrplens.github.io/phonometry/"

[tool.setuptools.packages.find]
where = ["src"]
